force-app/main/default/objects/Project__c/fields/Hours_Sold__c.field-meta.xml
<CustomField>
    <fullName>Hours_Sold__c</fullName>
    <label>Hours Sold</label>
    <summarizedField>Project_Role__c.Hours_Required__c</summarizedField>
    <summaryForeignKey>Project_Role__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>