force-app/main/default/objects/Project__c/fields/RolesComplete__c.field-meta.xml
<CustomField>
    <fullName>RolesComplete__c</fullName>
    <label>RolesComplete</label>
    <summaryFilterItems>
        <field>Project_Role__c.Hours_Complete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Role__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>