force-app/main/default/objects/Project__c/fields/RolesQuantity__c.field-meta.xml
<CustomField>
    <fullName>RolesQuantity__c</fullName>
    <label>RolesQuantity</label>
    <summaryForeignKey>Project_Role__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>