force-app/main/default/objects/Project__c/validationRules/correctStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>correctStartDate</fullName>
    <active>true</active>
    <description>Verifica si la fecha de inicio estipulada corresponde a la fecha de hoy, o a una pasada</description>
    <errorConditionFormula>Start_Date__c  &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>La fecha de inicio del proyecto aún no ha llegado</errorMessage>
</ValidationRule>