force-app/main/default/objects/Project__c/validationRules/End_Date_must_be_a_Weekday.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_be_a_Weekday</fullName>
    <active>true</active>
    <description>End_Date_must_be_a_Weekday</description>
    <errorConditionFormula>(WEEKDAY( End_Date__c ) == 1) || (WEEKDAY( End_Date__c ) == 7)</errorConditionFormula>
    <errorMessage>End_Date_must_be_a_Weekday</errorMessage>
</ValidationRule>