force-app/main/default/objects/Project__c/validationRules/Start_Date_must_be_a_Weekday.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_must_be_a_Weekday</fullName>
    <active>true</active>
    <errorConditionFormula>(WEEKDAY( Start_Date__c ) == 1)||(WEEKDAY( Start_Date__c ) == 7)</errorConditionFormula>
    <errorMessage>Start_Date_must_be_a_Weekday</errorMessage>
</ValidationRule>