force-app/main/default/objects/Project__c/listViews/projectList.listView-meta.xml
<ListView>
    <fullName>projectList</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Hours_Sold__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>projectList</label>
</ListView>